# sphinx-collector

./: .gitignore  pyproject.toml
sphinx_collector/: __init__.py  main.py
